fixed background image attachment and hid maximage on mobile

--- a/style/style-main.css
+++ b/style/style-main.css
@@ -77,24 +77,7 @@ table {
   src: url( '../font/Gotham-Bold.otf' );  
 }
 
-/*Container for all content in the page*/
-/*.mainWrapper {
-	width: 100%;
-	height: 100%;
-	position:relative;
-}
 
-.mainWrapper:before,
-.mainWrapper:after {
-  content: "";
-  display: table;
-}
-.mainWrapper:after {
-  clear: both;
-}*/
-
-
-/* Main menu */
 .menuContainer {
     display: block;
     float: left;
@@ -111,7 +94,7 @@ table {
     .menuButton {
         /*display: block !important;*/
         float: none !important;
-        width: 80% !important;
+        width: 85% !important;
         vertical-align: center !important;
     }
     .menuText {
@@ -125,6 +108,14 @@ table {
 
     .backdrop {
         opacity: 0.5 !important;
+    }
+
+    #maximage {
+        display: none !important;
+    }
+    body {
+        background: url('../images/frontpage01.jpg') !important;
+        background-attachment: fixed !important;
     }
 }
 
